Update test setup
Because JUnit 6 requires 17, the decision was to upgrade whole test run
to Java 17 along with JUnit.